# SAR_RayTracer

./: 10_cornell_SAR.out  10_cornell_SAR.ppm  11_rungholt_SAR.out  1_cornell_ray.out  2_cornell_ray.out  2_cornell_ray.ppm  3_house_ray.out  3_house_ray.ppm  3_house_ray_test.out  CMakeLists.txt  README.md  box.out  box.ppm  checkered.out  checkered.ppm  cornell.out  cornell.ppm  cornell_backpack.out  cornell_backpack.ppm  cornell_box.out  cornell_light.out  cornell_light.ppm  cornell_metal.out  cornell_metal.ppm  cornell_quad.out  cornell_quad.ppm  cornell_sphere.out  cornell_sphere.ppm  cornell_tri.out  cornell_tri.ppm  cornell_triangle.ppm  earth.out  earth.ppm  eiffel_SAR.out  eiffel_SAR.ppm  light.out  light.ppm  marble.out  marble.ppm  perlin.out  (+12 more)
images/: 1_cornell_ray.ppm  3_house_ray_test.ppm  eiffel_SAR.ppm
include/: SAR_RayTracer.h  aabb.h  bvh.h  camera.h  color.h  common.h  constant_medium.h  hitable.h  hitable_list.h  hittable.h  hittable_list.h  interval.h  material.h  model.h  obj_loader.h  onb.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  sphere.h  texture.h  triangle.h  vec3.h
models/: eiffel.mtl
src/: SAR_RayTracer.cpp  main.cpp  monte.cpp  monteCarlo.cpp  newMain.cpp
